objects/MedProSC__MedPro_Pass_1_Layout_Element__c.object
<CustomObject>
    <description>A custom object which facilitates the customization of which fields appear on the &quot;MedPro Search Results&quot; page for a specific &quot;MedPro Customer&quot; configuration.</description>
    <fields>
        <fullName>MedProSC__Is_Active__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Sets layout element to active (show) or inactive (hide) on the Search Results page</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__Lightning_Available__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lightning Available</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The associated MedPro Customer for this Search Result Layout Element</inlineHelpText>
        <label>MedPro Customer</label>
        <referenceTo>MedProSC__MedProCustomer__c</referenceTo>
        <relationshipLabel>MedPro Search Result Layout Elements</relationshipLabel>
        <relationshipName>MedPro_Pass_1_Layout_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__MedPro_Substitute_Parent_Mapping__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Allows the code to use a current Salesforce field to show in place of results returned from MedPro if the field exists in Salesforce.</description>
        <inlineHelpText>Allows the code to use a current Salesforce field to show in place of results returned from MedPro if the field exists in Salesforce.</inlineHelpText>
        <label>Substitute Parent Mapping</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>MedProSC__MedProSOMapping__c.MedProSC__MappingSource__c</field>
                <operation>equals</operation>
                <value>Sync</value>
            </filterItems>
            <filterItems>
                <field>MedProSC__MedProSOMapping__c.MedProSC__ParentDataMapping__c</field>
                <operation>equals</operation>
                <value></value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>MedProSC__MedProSOMapping__c</referenceTo>
        <relationshipLabel>MedPro Search Result Layout Elements</relationshipLabel>
        <relationshipName>MedPro_Search_Result_Layout_Elements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MedProSC__Ordinal_Position__c</fullName>
        <inlineHelpText>Numeric value allows this element to be reordered relative to other elements</inlineHelpText>
        <label>Ordinal Position</label>
        <precision>2</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MedProSC__SourceFieldName__c</fullName>
        <inlineHelpText>The name of the field from MedPro which will be displayed on the Search Results page</inlineHelpText>
        <label>Source Field Name</label>
        <length>64</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__Substitute_Field__c</fullName>
        <description>Field to substitute from Salesforce to the MedPro record on the layout.</description>
        <inlineHelpText>Field to substitute from Salesforce to the MedPro record on the layout.</inlineHelpText>
        <label>Substitute Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MedProSC__SyncReOrderFlag__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SyncReOrderFlag</label>
        <type>Checkbox</type>
    </fields>
    <label>MedPro Search Result Layout Element</label>
    <nameField>
        <label>Column Header</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MedPro Search Result Layout Elements</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>